--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.3.2
   flutter_animate: ^4.5.2
   uuid: ^4.5.2
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
