--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_animate: ^4.5.2
   uuid: ^4.5.2
   fluttertoast: ^9.0.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/
+  assets:
+    - assets/
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,10 +81,10 @@ assets:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
-  - family: Pilat
-    fonts:
-      - asset: assets/pilat.ttf
+  fonts:
+    - family: Pilat
+      fonts:
+        - asset: assets/pilat.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
